# TemplateCode

./: .gitignore  README.md
3D_Object_Recognition/: correspondence_grouping.cpp
AveragingTemporal/src/: CMakeLists.txt  averaging_temporal.cpp
CloudViewer/src/: CMakeLists.txt  CMakeLists.txt~  cloud_viewer.cpp
ISScompareKeypoints/src/: CMakeLists.txt  CMakeLists.txt~  ISScompareKeypoints.cpp
KeypointDetection/: ISSkeypoints.cpp  ISSkeypoints.cpp~
KeypointDetection/src/: CMakeLists.txt  ISSkeypoints.cpp
KeypointDetection/src/Class/: iss_3d.hpp
MovingLS/src/: CMakeLists.txt
PCLVisualizer/src/: CMakeLists.txt  PCLVisualizer.cpp
PassThroughFilter/src/: CMakeLists.txt  pass_through_filter.cpp
PreProcessing/: object_detection  readme.txt~
PreProcessing/object_detection/point_cloud_preprocessing/: CMakeLists.txt~
PreProcessing/point_cloud_preprocessing/: .cproject  .project  CMakeLists.txt  package.xml
PreProcessing/point_cloud_preprocessing/include/point_cloud_preprocessing/: PointCloudPreprocessing.hpp  filtering.hpp
PreProcessing/point_cloud_preprocessing/src/: PointCloudPreprocessing.cpp  filtering.cpp
PreProcessing/src/: CMakeLists.txt  preprocessing.cpp
Registration/src/: CMakeLists.txt  registration.cpp
RoPS_Deskriptor/Modified original Class/: CMakeLists.txt  rops_descriptor.h  rops_descriptor.hpp  rops_feature.h  rops_feature.hpp
RoPS_Deskriptor/src/: CMakeLists.txt  CMakeLists.txt~  ChangeLog.txt  ChangeLog.txt~  PC_remaping~  feature.h  feature.hpp  feature2.h  feature2.hpp  rops_descriptor.cpp  rops_descriptor_main.cpp  rops_estimation.h  rops_estimation.hpp
RoPS_Deskriptor/src/edited/: rops_estimation.h  rops_estimation.hpp
RoPS_Original/src/: CMakeLists.txt  rops_feature_original.cpp
TemplateProject/src/: CMakeLists.txt
Test_Clouds/: BoxOnTable.ply  Lamp.pcd  PCDowl.pcd  clipedKorb.pcd  clipedKorb.ply  owl20.ply
Test_Clouds/Bologna Dataset/Random1/: Scene0-rs0.xf  Scene0-rs1.xf  Scene0-rs2.xf  Scene0.ply  Scene1-rs1.xf  Scene1-rs2.xf  Scene10-rs0.xf  Scene10-rs1.xf  Scene10-rs2.xf  Scene11-rs1.xf  Scene12-rs0.xf  Scene12-rs1.xf  Scene13-rs0.xf  Scene13-rs1.xf  Scene14-rs0.xf  Scene14-rs2.xf  Scene15-rs1.xf  Scene16-rs1.xf  Scene16-rs3.xf  Scene17-rs0.xf  Scene17-rs1.xf  Scene17-rs2.xf  Scene17-rs3.xf  Scene18-rs1.xf  Scene19-rs0.xf  Scene19-rs1.xf  Scene19-rs2.xf  Scene19-rs3.xf  Scene2-rs1.xf  Scene20-rs0.xf  Scene20-rs1.xf  Scene21-rs3.xf  Scene22-rs0.xf  Scene22-rs1.xf  Scene22-rs2.xf  Scene22-rs3.xf  Scene24-rs0.xf  Scene25-rs0.xf  Scene25-rs1.xf  Scene25-rs3.xf  (+59 more)
Test_Clouds/Bologna Dataset/Random2/: Scene0_1-8.ply  Scene1-rs0.xf  Scene10_1-8.ply  Scene11-rs0.xf  Scene11-rs2.xf  Scene11_1-8.ply  Scene12-rs2.xf  Scene12_1-8.ply  Scene13-rs2.xf  Scene13_1-8.ply  Scene14-rs1.xf  Scene14_1-8.ply  Scene15-rs0.xf  Scene15-rs2.xf  Scene15-rs3.xf  Scene15_1-8.ply  Scene16-rs0.xf  Scene16-rs2.xf  Scene16_1-8.ply  Scene17_1-8.ply  Scene18-rs0.xf  Scene18-rs2.xf  Scene18-rs3.xf  Scene18_1-8.ply  Scene19_1-8.ply  Scene1_1-8.ply  Scene2-rs0.xf  Scene2-rs2.xf  Scene20-rs2.xf  Scene20-rs3.xf  Scene20_1-8.ply  Scene21-rs0.xf  Scene21-rs1.xf  Scene21-rs2.xf  Scene21_1-8.ply  Scene22_1-8.ply  Scene23-rs0.xf  Scene23-rs1.xf  Scene23-rs2.xf  Scene23-rs3.xf  (+89 more)
Test_Clouds/Foamstone/F1/: FoamStoneaveraged_unorganized.pcd  FoamStoneaveraged_unorganized_Keypoints.pcd  FoamStoneaveraged_unorganized_LRFs.pcd  FoamStoneaveraged_unorganized_LRFs.ply  FoamStoneaveraged_unorganized_Mesh.ply  FoamStoneaveraged_unorganized_RoPSHistograms.pcd  FoamStoneaveraged_unorganized_RoPSHistograms.ply
Test_Clouds/Foamstone/F2/: FoamStoneaveraged_unorganized.pcd  FoamStoneaveraged_unorganized.ply  FoamStoneaveraged_unorganized_LRFs.pcd  FoamStoneaveraged_unorganized_RoPSHistograms.ply
Test_Clouds/Foamstone/F3/: FoamStoneaveraged_unorganized.pcd  FoamStoneaveraged_unorganized_Keypoints.pcd  FoamStoneaveraged_unorganized_LRFs.pcd  FoamStoneaveraged_unorganized_LRFs.ply  FoamStoneaveraged_unorganized_Mesh.ply  FoamStoneaveraged_unorganized_RoPSHistograms.pcd  FoamStoneaveraged_unorganized_RoPSHistograms.ply
Test_Clouds/Foamstone/F4/: FoamStoneaveraged_unorganized.pcd  FoamStoneaveraged_unorganized_Keypoints.pcd  FoamStoneaveraged_unorganized_LRFs.pcd  FoamStoneaveraged_unorganized_LRFs.ply  FoamStoneaveraged_unorganized_Mesh.ply  FoamStoneaveraged_unorganized_RoPSHistograms.pcd  FoamStoneaveraged_unorganized_RoPSHistograms.ply
Test_Clouds/TemporalFilteringCloudSet_Korb/: Korb_cliped_averaged.pcd  Korb_cliped_averaged.ply
Test_Clouds/TemporalFilteringCloudSet_KorbStat/: KorbSaveraged_cliped.pcd  KorbSaveraged_cliped_Keypoints.pcd
Test_Clouds/TemporalFilteringCloudSet_Stone/: Stone_cliped_averaged.pcd  Stone_cliped_averaged.ply
Test_Clouds/TemporalFilteringCloudSet_StoneStat/: StoneStataveraged.pcd  StoneStataveraged_cliped.ply  StoneStataveraged_unorganized.pcd  StoneStataveraged_unorganized_Keypoints.pcd
Triangulation/: readme.txt
Triangulation/src/: greedy_projection.cpp
Triangulation_Test/src/: CMakeLists.txt  gp3.h  gp3.hpp  greedy_projection.cpp
bagfiles/bagfiles/: 2016-02-28-15-47-55.bag
matching_eval/src/: CMakeLists.txt  CMakeLists.txt~  ChangeLog.txt  PC_remaping  feature2.h  feature2.hpp  matching_eval.cpp  rops_estimation.hpp
object_localisation/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
object_localisation/include/object_localisation/: ObjectLocalisation.hpp  feature2.h  filtering.hpp  keypoint.hpp  meshing.hpp  rops_estimation.h
object_localisation/models/: FPFHSignature_1.ply  Keypoints_0.pcd  LRFs_0.ply  PointCloud_FPFHSignature.pcd  PointCloud_keypoints.pcd  PointCloud_preprocessed.pcd  Preprocessed_0.pcd  Preprocessed_0.ply  Signature_0.ply
object_localisation/src/: ObjectLocalisation.cpp  feature2.hpp  filtering.cpp  keypoint.cpp  meshing.cpp  object_localisation_node.cpp  rops_estimation.hpp
planar segmentation/src/: planar_segmentation.cpp
range2depth/src/: CMakeLists.txt  range2depth.cpp
vtk2ply/src/: CMakeLists.txt  CMakeLists.txt~  vtk2ply.cpp
(+142 files in other folders)
