<?xml version="1.0"?>
<package>
  <name>point_cloud_preprocessing</name>
  <version>0.0.0</version>
  <description>The point_cloud_preprocessing package</description>
  <maintainer email="yvesz@ethz.ch"> Yves Zimmermann </maintainer>
  <license>BSD</license>
  
  <!-- <author email="yvesz@ethz.ch">Yves Zimmermann</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>